--- a/05-NavigationApp/package.json
+++ b/05-NavigationApp/package.json
@@ -10,13 +10,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.4.3",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gesture-handler": "^2.28.0",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1"
+    "react-native-screens": "^4.11.1",
+    "react-native-worklets": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
