--- a/05-NavigationApp/package.json
+++ b/05-NavigationApp/package.json
@@ -10,13 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/evil-icons": "^12.3.0",
+    "@react-native-vector-icons/fontawesome6": "^12.2.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/drawer": "^7.5.8",
     "@react-navigation/elements": "^2.4.3",
+    "@react-navigation/material-top-tabs": "^7.3.7",
     "@react-navigation/native": "^7.1.10",
     "@react-navigation/native-stack": "^7.3.14",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-pager-view": "^6.9.1",
     "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "^4.11.1",
