--- a/10-mapsapp/android/app/src/main/AndroidManifest.xml
+++ b/10-mapsapp/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
     android:usesCleartextTraffic="${usesCleartextTraffic}"
     android:supportsRtl="true"
     android:enableOnBackInvokedCallback="false">
+    <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="@string/GOOGLE_MAPS_API_KEY" />
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
