--- a/10-mapsapp/package.json
+++ b/10-mapsapp/package.json
@@ -19,7 +19,9 @@
     "@react-navigation/stack": "^7.6.3",
     "react": "19.1.1",
     "react-native": "0.82.1",
+    "react-native-config": "^1.6.1",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-maps": "^1.26.20",
     "react-native-permissions": "^5.4.4",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.18.0",
