--- a/12-productsApp/package.json
+++ b/12-productsApp/package.json
@@ -11,14 +11,22 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/stack": "^7.6.12",
+    "nativewind": "^4.2.1",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
     "react-native": "0.83.0",
     "react-native-gesture-handler": "^2.29.1",
-    "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.19.0"
+    "react-native-reanimated": "^4.2.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.19.0",
+    "react-native-worklets": "^0.7.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
+    "tailwindcss": "^3.4.19"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -36,7 +44,7 @@
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
-    "prettier": "2.8.8",
+    "prettier": "^3.7.4",
     "react-test-renderer": "19.2.0",
     "typescript": "^5.8.3"
   },
