--- a/12-productsApp/package.json
+++ b/12-productsApp/package.json
@@ -10,11 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/stack": "^7.6.12",
+    "axios": "^1.13.2",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
@@ -26,7 +28,8 @@
     "react-native-worklets": "^0.7.1",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
-    "tailwindcss": "^3.4.19"
+    "tailwindcss": "^3.4.19",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -40,11 +43,13 @@
     "@react-native/metro-config": "0.83.0",
     "@react-native/typescript-config": "0.83.0",
     "@types/jest": "^29.5.13",
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "^3.7.4",
+    "react-native-dotenv": "^3.4.11",
     "react-test-renderer": "19.2.0",
     "typescript": "^5.8.3"
   },
