--- a/12-productsApp/package.json
+++ b/12-productsApp/package.json
@@ -16,6 +16,7 @@
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/native": "^7.1.25",
     "@react-navigation/stack": "^7.6.12",
+    "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -42,6 +43,7 @@
     "@react-native/eslint-config": "0.83.0",
     "@react-native/metro-config": "0.83.0",
     "@react-native/typescript-config": "0.83.0",
+    "@tanstack/eslint-plugin-query": "^5.91.2",
     "@types/jest": "^29.5.13",
     "@types/node": "^25.0.3",
     "@types/react": "^19.2.0",
