--- a/12-productsApp/package.json
+++ b/12-productsApp/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^7.6.12",
     "@tanstack/react-query": "^5.90.12",
     "axios": "^1.13.2",
+    "formik": "^2.4.9",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
