--- a/12-productsApp/android/app/src/main/AndroidManifest.xml
+++ b/12-productsApp/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
     android:theme="@style/AppTheme"
     android:usesCleartextTraffic="${usesCleartextTraffic}"
     android:supportsRtl="true"
-    android:enableOnBackInvokedCallback="false">
+    android:enableOnBackInvokedCallback="false"
+    android:windowSoftInputMode="adjustResize">
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
