--- a/12-productsApp/android/app/src/main/AndroidManifest.xml
+++ b/12-productsApp/android/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
     android:roundIcon="@mipmap/ic_launcher_round"
     android:allowBackup="false"
     android:theme="@style/AppTheme"
-    android:usesCleartextTraffic="${usesCleartextTraffic}"
+    android:usesCleartextTraffic="true"
     android:supportsRtl="true"
     android:enableOnBackInvokedCallback="false"
-    android:windowSoftInputMode="adjustResize">
+    android:windowSoftInputMode="adjustResize"
+  >
     <activity
       android:name=".MainActivity"
       android:label="@string/app_name"
