--- a/12-productsApp/package.json
+++ b/12-productsApp/package.json
@@ -23,7 +23,9 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "react": "19.2.0",
     "react-native": "0.83.0",
+    "react-native-blob-util": "^0.24.6",
     "react-native-gesture-handler": "^2.29.1",
+    "react-native-image-picker": "^8.2.1",
     "react-native-reanimated": "^4.2.0",
     "react-native-safe-area-context": "^5.4.0",
     "react-native-screens": "^4.19.0",
